<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="lwe_app_name">易自习</string>
    <string name="lwe_hint_username">请输入用户名</string>
    <string name="lwe_hint_password">请输入密码</string>
    <string name="lwe_hint_old_password">请输入当前密码</string>
    <string name="lwe_hint_new_password">请输入新密码</string>
    <string name="lwe_hint_confirm_password">请再次输入密码</string>
    <string name="lwe_hint_name">请输入昵称</string>
    <string name="lwe_hint_age">请输入年龄</string>
    <string name="lwe_hint_age_again">请重新输入年龄</string>
    <string name="lwe_hint_confirm">确认</string>
    <string name="lwe_hint_register_username">在此处填写用户名</string>
    <string name="lwe_hint_friend_add">请输入你要添加的好友用户名</string>
    <string name="lwe_hint_reason">请填写验证信息</string>
    <string name="lwe_hint_room_name">请输入房间名称</string>
    <string name="lwe_hint_room_search">输入房间ID来搜索房间</string>
    <string name="lwe_button_phone_login">手机号登录</string>
    <string name="lwe_button_lost_password">找回密码</string>
    <string name="lwe_button_register">新用户注册</string>
    <string name="lwe_button_register_real">注册</string>
    <string name="lwe_button_done">完成</string>
    <string name="lwe_button_confirm">确定</string>
    <string name="lwe_button_login">→</string>
    <string name="lwe_button_cancel">取消</string>
    <string name="lwe_button_friend_add">添加</string>
    <string name="lwe_button_accept">同意</string>
    <string name="lwe_button_decline">拒绝</string>
    <string name="lwe_button_remove">移除</string>
    <string name="lwe_button_revert">撤销</string>
    <string name="lwe_button_log_out">退出登录</string>
    <string name="lwe_button_create">创建</string>
    <string name="lwe_button_join">加入</string>
    <string name="lwe_button_chat">发送消息</string>
    <string name="lwe_button_add_friend">添加好友</string>
    <string name="lwe_button_setting">房间设置</string>
    <string name="lwe_success_register">注册成功</string>
    <string name="lwe_success_add">已发送好友请求</string>
    <string name="lwe_success_update">修改成功</string>
    <string name="lwe_success_black_list_add">已添加到黑名单</string>
    <string name="lwe_success_friend_delete">已删除该好友</string>
    <string name="lwe_success_room_kick">踢出成功</string>
    <string name="lwe_error_login_format">用户名或密码格式有误</string>
    <string name="lwe_error_login_format_username">用户名格式有误，输入仅为数字、字母及下划线且长度大于等于6小于等于16</string>
    <string name="lwe_error_login_format_password">密码错误，输入仅为数字、字母、下划线、-、+、=、,、.且长度大于等于6小于等于16且至少含两种字符</string>
    <string name="lwe_error_age_format">年龄有误，请填写1至120的数字</string>
    <string name="lwe_error_confail">服务器异常，请稍后再试</string>
    <string name="lwe_error_timeout">连接超时，请稍后再试</string>
    <string name="lwe_error_unknown">出现未知错误，请稍后再试</string>
    <string name="lwe_error_login_info">用户名或密码错误</string>
    <string name="lwe_error_old_password">当前密码错误，请确认后重新输入</string>
    <string name="lwe_error_confirm_password">两次密码输入不一致</string>
    <string name="lwe_error_password">密码为数字、字母、-+=_,.且长度大于等于6小于等于16且至少含两种字符</string>
    <string name="lwe_error_name">昵称不能为空且长度不大于16位</string>
    <string name="lwe_error_signature">个性签名长度不大于20位</string>
    <string name="lwe_error_city">所在地区不能为空</string>
    <string name="lwe_error_login_retry">登录次数过多，请稍后再试</string>
    <string name="lwe_error_nonetwork">网络连接异常，请检查您的网络设置</string>
    <string name="lwe_error_connection">网络连接出错，请稍后重试</string>
    <string name="lwe_error_frequently">您的操作过于频繁，请稍后再试</string>
    <string name="lwe_error_register">该用户名已注册</string>
    <string name="lwe_error_search_no_result">无此用户</string>
    <string name="lwe_error_search_no_result_room">找不到该房间</string>
    <string name="lwe_error_black_list_empty">黑名单为空</string>
    <string name="lwe_error_reason">验证信息不能为空且不能超过30个字！</string>
    <string name="lwe_error_update">修改信息失败，请重试</string>
    <string name="lwe_error_perm">易学习需要一定的权限才能运行，请同意权限请求</string>
    <string name="lwe_error_fetch_info">无法获取用户信息，请稍后再试</string>
    <string name="lwe_error_fetch_friend_request">无法获取好友请求，请稍后再试</string>
    <string name="lwe_error_room_cover">请设置房间封面</string>
    <string name="lwe_error_room_name">房间名称不能为空或超过10个字符</string>
    <string name="lwe_error_avatar">无法加载用户头像，请稍后再试</string>
    <string name="lwe_error_join_room">加入自习室失败，请稍后再试</string>
    <string name="lwe_error_room_full">加入自习室失败，该自习室已满</string>
    <string name="lwe_error_init_nertc">音视频通信启动失败，请稍后再试</string>
    <string name="lwe_error_room_disconnect">网络中断，已退出房间</string>
    <string name="lwe_error_fetch_room_info">无法获取房间信息，请稍后再试</string>
    <string name="lwe_error_download_cover">无法下载房间封面，请稍后再试</string>
    <string name="lwe_error_room_invalid">该房间已不存在</string>
    <string name="lwe_error_room_force_leave">房主已离开房间，房间即将解散</string>
    <string name="lwe_error_black_list_remove_fail">黑名单移除失败，请稍后再试</string>
    <string name="lwe_error_black_list_add_fail">黑名单添加失败，请稍后再试</string>
    <string name="lwe_error_room_kick">踢出用户失败，请稍后再试</string>
    <string name="lwe_error_room_not_friend">你与房主不是好友关系，无法加入房间</string>
    <string name="lwe_error_friend_delete">好友删除失败，请稍后再试</string>
    <string name="lwe_error_rejoin_room">网络环境较差，重连失败，即将退出房间…</string>
    <string name="lwe_error_room_setting">获取房间设置失败，请稍后再试</string>
    <string name="lwe_error_room_setting_no_perm">你不是房主，不能更改设置哦~</string>
    <string name="lwe_progress_login">登录中…</string>
    <string name="lwe_progress_register">注册中…</string>
    <string name="lwe_progress_search">搜索中…</string>
    <string name="lwe_progress_room_create">创建中…</string>
    <string name="lwe_title_register">注册账号</string>
    <string name="lwe_title_mine">我的资料</string>
    <string name="lwe_title_setting">软件设置</string>
    <string name="lwe_title_user_setting">用户设置</string>
    <string name="lwe_title_update_password">更改密码</string>
    <string name="lwe_title_system_setting">系统设置</string>
    <string name="lwe_title_perm">权限设置</string>
    <string name="lwe_title_clear_cache">清理空间</string>
    <string name="lwe_title_edit_profile">编辑资料</string>
    <string name="lwe_title_edit_preference">修改偏好</string>
    <string name="lwe_title_friend">好友</string>
    <string name="lwe_title_friend_add">添加好友</string>
    <string name="lwe_title_friend_request">好友申请</string>
    <string name="lwe_title_black_list">黑名单</string>
    <string name="lwe_title_friend_info">个人资料</string>
    <string name="lwe_title_room_create">创建房间</string>
    <string name="lwe_title_room_exit">退出房间</string>
    <string name="lwe_title_room_kick">踢出用户</string>
    <string name="lwe_title_room_setting">房间设置</string>
    <string name="lwe_text_gender">性别</string>
    <string name="lwe_text_city">所在城市</string>
    <string name="lwe_text_edu">教育背景</string>
    <string name="lwe_text_school">所在学校</string>
    <string name="lwe_text_grade">年级</string>
    <string name="lwe_text_id">ID:</string>
    <string name="lwe_text_edit_preference">修改偏好</string>
    <string name="lwe_text_setting">软件设置</string>
    <string name="lwe_text_history">学习历史</string>
    <string name="lwe_text_about">关于我们</string>
    <string name="lwe_text_quality_image">默认图片质量</string>
    <string name="lwe_text_quality_video">默认视频质量</string>
    <string name="lwe_text_message_reminder">消息提醒</string>
    <string name="lwe_text_gravity">重力感应</string>
    <string name="lwe_text_permission">权限设置</string>
    <string name="lwe_text_clear_cache">清理空间</string>
    <string name="lwe_text_user_agreement">用户协议</string>
    <string name="lwe_text_location">允许自习室访问位置信息</string>
    <string name="lwe_text_camera">允许自习室使用相机功能</string>
    <string name="lwe_text_mic">允许自习室使用麦克风功能</string>
    <string name="lwe_text_document">允许自习室使文件存储和访问功能</string>
    <string name="lwe_text_clear_cache_image">清理图片缓存</string>
    <string name="lwe_text_clear_cache_msg">清理消息记录</string>
    <string name="lwe_text_home">主页</string>
    <string name="lwe_text_friend">好友</string>
    <string name="lwe_text_mine">我的</string>
    <string name="lwe_text_signature">个性签名</string>
    <string name="lwe_text_nickname">昵称</string>
    <string name="lwe_text_update_password">更改密码</string>
    <string name="lwe_text_old_password">当前密码</string>
    <string name="lwe_text_new_password">新密码</string>
    <string name="lwe_text_confirm_password">确认密码</string>
    <string name="lwe_text_personal_info">个人信息</string>
    <string name="lwe_text_avatar">头像</string>
    <string name="lwe_text_preference">自习偏好</string>
    <string name="lwe_text_time_study">自习时长</string>
    <string name="lwe_text_time_rest">小憩时长</string>
    <string name="lwe_text_content_study">学习内容</string>
    <string name="lwe_text_same_city">同城优先</string>
    <string name="lwe_text_same_school">同校优先</string>
    <string name="lwe_text_same_gender">同性优先</string>
    <string name="lwe_text_new_room_first">优先加入新房间</string>
    <string name="lwe_text_friend_add">已添加</string>
    <string name="lwe_text_friend_accept">已同意</string>
    <string name="lwe_text_friend_decline">已拒绝</string>
    <string name="lwe_text_black_list_removed">已移除</string>
    <string name="lwe_text_reason">验证信息：</string>
    <string name="lwe_text_empty_signature">暂无签名</string>
    <string name="lwe_text_age">年龄</string>
    <string name="lwe_text_logout">退出登录</string>
    <string name="lwe_text_user_setting">用户设置</string>
    <string name="lwe_text_system_setting">系统设置</string>
    <string name="lwe_text_room_name">房间名称</string>
    <string name="lwe_text_room_max_users">房间人数</string>
    <string name="lwe_text_room_friends_only">仅允许好友加入</string>
    <string name="lwe_text_room_cover">房间封面</string>
    <string name="lwe_text_video_mute">本地视频推送已暂停</string>
    <string name="lwe_text_video_unmute">本地视频推送已开启</string>
    <string name="lwe_text_audio_mute">本地音频推送已暂停</string>
    <string name="lwe_text_audio_unmute">本地音频推送已开启</string>
    <string name="lwe_text_video_mute_remote">用户视频已隐藏</string>
    <string name="lwe_text_video_unmute_remote">用户视频已显示</string>
    <string name="lwe_text_audio_mute_remote">用户已静音</string>
    <string name="lwe_text_audio_unmute_remote">静音已取消</string>
    <string name="lwe_text_room_exit">您真的要退出房间吗?</string>
    <string name="lwe_text_room_exit_creator">您是房主，退出房间后房间将会自动解散。您真的要退出房间吗?</string>
    <string name="lwe_text_more">更多</string>
    <string name="lwe_text_invite">邀请好友</string>
    <string name="lwe_text_kick">您已被房主踢出房间</string>
    <string name="lwe_text_room_kick_desc">您真的要踢出这个用户吗?</string>
    <string name="lwe_text_refresh">点击刷新</string>
    <string name="lwe_text_no_recs">现在没有开放的自习室，过会再来哦~</string>
    <string name="lwe_text_room_setting">房间设置</string>
    <string name="lwe_text_rejoin">网络环境较差，正在重连…</string>
    <string name="lwe_radio_male">男</string>
    <string name="lwe_radio_female">女</string>
    <string name="lwe_radio_unknown">私密</string>
    <string name="lwe_radio_high">高</string>
    <string name="lwe_radio_mid">中</string>
    <string name="lwe_radio_low">低</string>
    <string name="lwe_placeholder_citypicker">选择城市</string>
    <string name="lwe_placeholder_cityformat2">%1$s %2$s</string>
    <string name="lwe_placeholder_cityformat3">%1$s %2$s %3$s</string>
    <string name="lwe_placeholder_school">选择学校</string>
    <string name="lwe_placeholder_edu">选择学历</string>
    <string name="lwe_placeholder_grade">选择年级</string>
    <string name="lwe_placeholder_name">昵称</string>
    <string name="lwe_placeholder_username">ID</string>
    <string name="lwe_placeholder_signature">签名</string>
    <string name="lwe_placeholder_age">年龄</string>
    <string name="lwe_placeholder_room_name">房间名称</string>
    <string name="lwe_placeholder_room_tag">标签</string>
    <string-array name="lwe_spinner_max_users">
        <item>2人</item>
        <item>3人</item>
        <item>4人</item>
    </string-array>
    <string-array name="lwe_spinner_time_study">
        <item>不限时</item>
        <item>30分钟</item>
        <item>45分钟</item>
        <item>1小时</item>
        <item>1.5小时</item>
        <item>2小时</item>
        <item>3小时</item>
    </string-array>
    <string name="lwe_placeholder_info">基本信息</string>
</resources>