<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/lwe_background_grey"
    android:orientation="vertical"
    android:showDividers="middle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/lwe_placeholder_avatar"
            app:riv_border_color="@color/primary"
            app:riv_border_width="2dp"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/imageAvatar"
            android:text="@string/lwe_placeholder_name"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textReasonPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/imageAvatar"
            android:text="@string/lwe_text_reason"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/textReasonPrefix"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/buttonDecline"
            android:background="@drawable/lwe_button_round_blue"
            android:contentDescription="@string/empty"
            android:text="@string/lwe_button_accept"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDecline"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/lwe_button_round_darkred"
            android:contentDescription="@string/empty"
            android:text="@string/lwe_button_decline"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textAccept"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/empty"
            android:text="@string/lwe_text_friend_accept"
            android:textColor="@color/text_grey"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textDecline"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/empty"
            android:text="@string/lwe_text_friend_decline"
            android:textColor="@color/text_grey"
            android:textSize="20sp"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/background_grey" />

</LinearLayout>