<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_grey">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/lwe_background_grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/lwe_placeholder_avatar"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/imageAvatar"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:text="@string/lwe_placeholder_name"
                android:textSize="22sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_toEndOf="@id/imageAvatar"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:text="@string/lwe_placeholder_info"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/lwe_button_round_blue"
                android:contentDescription="@string/empty"
                android:text="@string/lwe_button_friend_add"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:id="@+id/textReasonPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:text="@string/lwe_text_reason"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:background="@drawable/nim_message_input_edittext_box">
            <EditText
                android:id="@+id/editTextReason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:inputType="textNoSuggestions"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:hint="@string/lwe_hint_reason"
                android:textSize="16sp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>