<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_grey">

        <EditText
            android:id="@+id/editTextSearchUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:background="@color/white"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
            android:hint="@string/lwe_hint_friend_add"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="30dp"
            android:singleLine="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/editTextSearchUsername"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/nim_actionbar_search_dark_icon" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/lwe_button_round_white"
            android:contentDescription="@string/empty"
            android:text="@string/lwe_button_cancel"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/lwe_background_grey"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white">

            <com.netease.nim.uikit.common.ui.imageview.HeadImageView
                android:id="@+id/imageAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/nim_avatar_default" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imageAvatar"
                android:text="@string/lwe_placeholder_name"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textSignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/imageAvatar"
                android:text="@string/lwe_placeholder_signature"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/lwe_button_round_blue"
                android:contentDescription="@string/empty"
                android:text="@string/lwe_button_friend_add"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textAdd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/empty"
                android:text="@string/lwe_text_friend_add"
                android:textColor="@color/text_grey"
                android:textSize="20sp"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/background_grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/lwe_background_grey"
        android:orientation="vertical"
        android:showDividers="middle"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/textNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:text="@string/lwe_error_search_no_result"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/background_grey" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

</LinearLayout>